add toggle menu in a header, 767px

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ title: Travel website
   <nav class="nav container">
     <a href="#" class="nav__logo">Travel</a>
 
-    <div class="nav__menu" id="nav__menu">
+    <div class="nav__menu" id="nav-menu">
       <ul class="nav__list">
         <li class="nav__item">
           <a href="#home" class="nav__link">Home</a>
