--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,11 @@ title: Travel website
           >
             <i class="ri-instagram-fill"></i>
           </a>
-          <a href="https://web.telegram.org/z/" target="_blank" class="home__social-link">
+          <a
+            href="https://web.telegram.org/z/"
+            target="_blank"
+            class="home__social-link"
+          >
             <i class="ri-telegram-fill"></i>
           </a>
         </div>
@@ -86,7 +90,30 @@ title: Travel website
       </div>
     </section>
 
-    <section class="about section" id="about"></section>
+    <section class="about section" id="about">
+      <div class="about__container container grid">
+        <div class="about__data">
+          <h2 class="section__title about__title">
+            More Information <br />
+            About The Best Beaches
+          </h2>
+          <p class="about__description">
+            You can find the most beautiful and plesant places at the best
+            prices with special discounts, you choose the place we will guide
+            you all the way to wait, get you place now
+          </p>
+          <a href="#" class="button">Reserve a place</a>
+        </div>
+        <div class="about__img">
+          <div class="about__img-overlay">
+            <img src="assets/images/about1.jpg" alt="" class="about__img-one" />
+          </div>
+          <div class="about__img-overlay">
+            <img src="assets/images/about2.jpg" alt="" class="about__img-two" />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="discover" id="discover"></section>
   </main>
