--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,63 @@ title: Travel website
       </div>
     </section>
 
-    <section class="discover" id="discover"></section>
+    <section class="discover" id="discover">
+      <h2 class="section__title">
+        Discover the most <br />
+        attactive places
+      </h2>
+      <div class="discover__container container mySwiper">
+        <div class="swiper-wrapper">
+          <!--==========DISCOVER 1===============-->
+          <div class="discover__card swiper-slide">
+            <img
+              src="assets/images/discover1.jpg"
+              alt=""
+              class="discover__img"
+            />
+            <div class="discover__data">
+              <h2 class="discover__title">Bali</h2>
+              <span class="discover__description">24 tours available</span>
+            </div>
+          </div>
+          <!--==========DISCOVER 2===============-->
+          <div class="discover__card swiper-slide">
+            <img
+              src="assets/images/discover2.jpg"
+              alt=""
+              class="discover__img"
+            />
+            <div class="discover__data">
+              <h2 class="discover__title">Hawaii</h2>
+              <span class="discover__description">15 tours available</span>
+            </div>
+          </div>
+          <!--==========DISCOVER 3===============-->
+          <div class="discover__card swiper-slide">
+            <img
+              src="assets/images/discover3.jpg"
+              alt=""
+              class="discover__img"
+            />
+            <div class="discover__data">
+              <h2 class="discover__title">Hvar</h2>
+              <span class="discover__description">18 tours available</span>
+            </div>
+          </div>
+          <!--==========DISCOVER 4===============-->
+          <div class="discover__card swiper-slide">
+            <img
+              src="assets/images/discover4.jpg"
+              alt=""
+              class="discover__img"
+            />
+            <div class="discover__data">
+              <h2 class="discover__title">Whitehaven</h2>
+              <span class="discover__description">32 tours available</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </div>
