--- a/src/index.html
+++ b/src/index.html
@@ -249,7 +249,6 @@ title: Travel website
       <h2 class="section__title">Choose Your Place</h2>
 
       <div class="place__container container grid">
-
         <div class="place__card">
           <img src="assets/images/place1.jpg" alt="" class="place__img" />
 
@@ -356,15 +355,44 @@ title: Travel website
     <section class="subscribe section">
       <div class="subscribe__bg">
         <div class="subscribe__container container">
-          <h2 class="section__title subscribe__title">Subscribe Our <br/> Newsletter</h2>
+          <h2 class="section__title subscribe__title">
+            Subscribe Our <br />
+            Newsletter
+          </h2>
 
-          <p class="subscribe__description">Subscribe to our newsletter and get a special 30% discount.</p>
+          <p class="subscribe__description">
+            Subscribe to our newsletter and get a special 30% discount.
+          </p>
 
           <form action="" class="subscribe__form">
-            <input type="text" placeholder="Enter email" class="subscribe__input">
+            <input
+              type="text"
+              placeholder="Enter email"
+              class="subscribe__input"
+            />
 
             <button class="button">Subscribe</button>
           </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="sponsor section">
+      <div class="sponsor__container container grid">
+        <div class="sponsor__content">
+          <img src="assets/images/sponsors1.png" alt="" class="sponsor__img" />
+        </div>
+        <div class="sponsor__content">
+          <img src="assets/images/sponsors2.png" alt="" class="sponsor__img" />
+        </div>
+        <div class="sponsor__content">
+          <img src="assets/images/sponsors3.png" alt="" class="sponsor__img" />
+        </div>
+        <div class="sponsor__content">
+          <img src="assets/images/sponsors4.png" alt="" class="sponsor__img" />
+        </div>
+        <div class="sponsor__content">
+          <img src="assets/images/sponsors5.png" alt="" class="sponsor__img" />
         </div>
       </div>
     </section>
