scroll up & styles for scrollbar

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ title: Travel website
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#home" class="nav__link"><span>Home</span></a>
+            <a href="#home" class="nav__link active-link"><span>Home</span></a>
           </li>
           <li class="nav__item">
             <a href="#about" class="nav__link"><span>About</span></a>
@@ -479,4 +479,7 @@ title: Travel website
       </div>
     </div>
   </footer>
+  <a href="" class="scrollup" id="scroll-up">
+    <i class="ri-arrow-up-line scrollup__icon"></i>
+  </a>
 </div>
