--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,13 @@ title: Travel website
             <a href="#place" class="nav__link"><span>Place</span></a>
           </li>
         </ul>
+
+        <div class="nav__dark">
+          <!-- Theme change button -->
+          <span class="change-theme-name">Dark mode</span>
+          <i class="ri-moon-line change-theme" id="theme-button"></i>
+        </div>
+
         <i class="ri-close-line nav__close" id="nav-close"></i>
       </div>
 
