--- a/src/index.html
+++ b/src/index.html
@@ -486,7 +486,7 @@ title: Travel website
       </div>
     </div>
   </footer>
-  <a href="" class="scrollup" id="scroll-up">
+  <a href="#" class="scrollup" id="scroll-up">
     <i class="ri-arrow-up-line scrollup__icon"></i>
   </a>
 </div>
